# lights

./: Cargo.toml  DMX_NOTES.md  FIXTURE_DATABASE.md  README.md  build.rs  patch.csv  tauri.conf.json
csrc/: dmx.c
fixture-data/: manufacturers.json
fixture-data/5star-systems/: spica-250m.json
fixture-data/abstract/: twister-4.json
fixture-data/acoustic-control/: par-180-cob-3in1.json
fixture-data/adb/: alc4.json  europe-105.json  warp-m.json
fixture-data/afx/: lmh460z.json
fixture-data/alien-pro/: alien-s.json
fixture-data/american-dj/: 12p-hex-ip.json  18p-hex-ip.json  7p-hex-ip.json  auto-spot-150.json  boom-box-fx2.json  cob-cannon-wash.json  crazy-pocket-8.json  dekker-led.json  dotz-par.json  encore-lp12z-ip.json  encore-profile-1000-ww.json  flat-par-qa12.json  flat-par-qa12xs.json  fog-fury-jett-pro.json  galaxian-3d.json  illusion-dotz-4-4.json  inno-pocket-beam-q4.json  inno-pocket-fusion.json  inno-spot-pro.json  mega-bar-50rgb-rc.json  mega-bar-50rgb.json  mega-bar-rgba.json  mega-hex-par.json  mega-tripar-profile-plus.json  mega-tripar-profile.json  mod-hex100.json  pocket-pro.json  quad-phase-hp.json  revo-4-ir.json  revo-burst.json  revo-sweep.json  saber-spot-rgbw.json  starburst.json  stinger-ii.json  stinger-spot.json  uv-eco-bar.json  vbar-pak.json  vizi-q-wash7.json  vizi-spot-led-pro.json  xs-400.json
fixture-data/ape-labs/: lightcan.json
fixture-data/aputure/: ls-1200d-pro.json  ls-300x.json  ls-600d-pro.json  ls-600d.json  ls-600x-pro.json  nova-p300c.json
include/: dmx.h
src/: cli.rs  gui.rs  main.rs
(+554 files in other folders)
