[package]
name = "lights"
version = "0.1.0"
edition = "2021"

[features]
default = ["dmx"]
dmx = []      # Enable DMX hardware support (enabled by default)
no-dmx = []   # Disable DMX for development without hardware

[dependencies]
csv = "1.3.1"
libc = "0.2.176"
tauri = { version = "1.0", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
bindgen = "0.70"
cc = "1.0"
tauri-build = { version = "1.0", features = [] }
